Migrated Anchor Tree

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -643,15 +643,15 @@
   "block.betternether.anchor_tree_slab": "Ankerbaumstufe",
   "block.betternether.anchor_tree_stairs": "Ankerbaumtreppe",
   "block.betternether.anchor_tree_trapdoor": "Ankerbaumfalltür",
-  "block.betternether.barrel_anchor_tree": "Ankerbaumfass",
-  "block.betternether.bar_stool_anchor_tree": "Ankerbaumbarhocker",
-  "block.betternether.chair_anchor_tree": "Ankerbaumstuhl",
-  "block.betternether.chest_anchor_tree": "Ankerbaumtruhe",
-  "block.betternether.crafting_table_anchor_tree": "Ankerbaumwerkbank",
-  "block.betternether.sign_anchor_tree": "Ankerbaumschild",
-  "block.betternether.striped_bark_anchor_tree": "Entrindetes Ankerbaumholz",
-  "block.betternether.striped_log_anchor_tree": "Entrindeter Ankerbaumstamm",
-  "block.betternether.taburet_anchor_tree": "Ankerbaumtischchen",
+  "block.betternether.anchor_tree_barrel": "Ankerbaumfass",
+  "block.betternether.anchor_tree_bar_stool": "Ankerbaumbarhocker",
+  "block.betternether.anchor_tree_chair": "Ankerbaumstuhl",
+  "block.betternether.anchor_tree_chest": "Ankerbaumtruhe",
+  "block.betternether.anchor_tree_crafting_table": "Ankerbaumwerkbank",
+  "block.betternether.anchor_tree_sign": "Ankerbaumschild",
+  "block.betternether.anchor_tree_stripped_bark": "Entrindetes Ankerbaumholz",
+  "block.betternether.anchor_tree_stripped_log": "Entrindeter Ankerbaumstamm",
+  "block.betternether.anchor_tree_taburet": "Ankerbaumtischchen",
 
   "block.betternether.anchor_tree_vine": "Ankerbaumranke",
   "block.betternether.anchor_tree_leaves": "Ankerbaumblätter",
