--- a/src/main/resources/assets/betternether/lang/fr_fr.json
+++ b/src/main/resources/assets/betternether/lang/fr_fr.json
@@ -639,15 +639,15 @@
 	"block.betternether.anchor_tree_slab": "Anchor Tree Slab",
 	"block.betternether.anchor_tree_stairs": "Anchor Tree Stairs",
 	"block.betternether.anchor_tree_trapdoor": "Anchor Tree Trapdoor",
-	"block.betternether.barrel_anchor_tree": "Anchor Tree Barrel",
-	"block.betternether.bar_stool_anchor_tree": "Anchor Tree Bar Stool",
-	"block.betternether.chair_anchor_tree": "Anchor Tree Chair",
-	"block.betternether.chest_anchor_tree": "Anchor Tree Chest",
-	"block.betternether.crafting_table_anchor_tree": "Anchor Tree Crafting Table",
-	"block.betternether.sign_anchor_tree": "Anchor Tree Sign",
-	"block.betternether.striped_bark_anchor_tree": "Anchor Tree Striped Bark",
-	"block.betternether.striped_log_anchor_tree": "Anchor Tree Striped Log",
-	"block.betternether.taburet_anchor_tree": "Anchor Tree Taburet",
+	"block.betternether.anchor_tree_barrel": "Anchor Tree Barrel",
+	"block.betternether.anchor_tree_bar_stool": "Anchor Tree Bar Stool",
+	"block.betternether.anchor_tree_chair": "Anchor Tree Chair",
+	"block.betternether.anchor_tree_chest": "Anchor Tree Chest",
+	"block.betternether.anchor_tree_crafting_table": "Anchor Tree Crafting Table",
+	"block.betternether.anchor_tree_sign": "Anchor Tree Sign",
+	"block.betternether.anchor_tree_stripped_bark": "Anchor Tree Striped Bark",
+	"block.betternether.anchor_tree_stripped_log": "Anchor Tree Striped Log",
+	"block.betternether.anchor_tree_taburet": "Anchor Tree Taburet",
 	
 	"block.betternether.anchor_tree_vine": "Anchor Tree Vine",
 	"block.betternether.anchor_tree_leaves": "Anchor Tree Leaves",
