--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -643,15 +643,15 @@
 	"block.betternether.anchor_tree_slab": "Laje de âncorácea",
 	"block.betternether.anchor_tree_stairs": "Escadas de âncorácea",
 	"block.betternether.anchor_tree_trapdoor": "Alçapão de âncorácea",
-	"block.betternether.barrel_anchor_tree": "Barril de âncorácea",
-	"block.betternether.bar_stool_anchor_tree": "Banqueta de âncorácea",
-	"block.betternether.chair_anchor_tree": "Cadeira de âncorácea",
-	"block.betternether.chest_anchor_tree": "Baú de âncorácea",
-	"block.betternether.crafting_table_anchor_tree": "Alçapão de âncorácea",
-	"block.betternether.sign_anchor_tree": "Placa de âncorácea",
-	"block.betternether.striped_bark_anchor_tree": "Madeira de âncorácea descascada",
-	"block.betternether.striped_log_anchor_tree": "Tronco de âncorácea descascado",
-	"block.betternether.taburet_anchor_tree": "Banco de âncorácea",
+	"block.betternether.anchor_tree_barrel": "Barril de âncorácea",
+	"block.betternether.anchor_tree_bar_stool": "Banqueta de âncorácea",
+	"block.betternether.anchor_tree_chair": "Cadeira de âncorácea",
+	"block.betternether.anchor_tree_chest": "Baú de âncorácea",
+	"block.betternether.anchor_tree_crafting_table": "Alçapão de âncorácea",
+	"block.betternether.anchor_tree_sign": "Placa de âncorácea",
+	"block.betternether.anchor_tree_stripped_bark": "Madeira de âncorácea descascada",
+	"block.betternether.anchor_tree_stripped_log": "Tronco de âncorácea descascado",
+	"block.betternether.anchor_tree_taburet": "Banco de âncorácea",
 	
 	"block.betternether.anchor_tree_vine": "Trepadeiras de âncorácea",
 	"block.betternether.anchor_tree_leaves": "Folhas de âncorácea",
