--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -644,15 +644,15 @@
 	"block.betternether.anchor_tree_slab": "Плита из якорного дерева",
 	"block.betternether.anchor_tree_stairs": "Ступени из якорного дерева",
 	"block.betternether.anchor_tree_trapdoor": "Люк из якорного дерева",
-	"block.betternether.barrel_anchor_tree": "Бочка из якорного дерева",
-	"block.betternether.bar_stool_anchor_tree": "Барный стул из якорного дерева",
-	"block.betternether.chair_anchor_tree": "Стул из якорного дерева",
-	"block.betternether.chest_anchor_tree": "Сундук из якорного дерева",
-	"block.betternether.crafting_table_anchor_tree": "Верстак из якорного дерева",
-	"block.betternether.sign_anchor_tree": "Табличка из якорного дерева",
-	"block.betternether.striped_bark_anchor_tree": "Обтёсанная кора якорного дерева",
-	"block.betternether.striped_log_anchor_tree": "Обтёсанное бревно якорного дерева",
-	"block.betternether.taburet_anchor_tree": "Табурет из якорного дерева",
+	"block.betternether.anchor_tree_barrel": "Бочка из якорного дерева",
+	"block.betternether.anchor_tree_bar_stool": "Барный стул из якорного дерева",
+	"block.betternether.anchor_tree_chair": "Стул из якорного дерева",
+	"block.betternether.anchor_tree_chest": "Сундук из якорного дерева",
+	"block.betternether.anchor_tree_crafting_table": "Верстак из якорного дерева",
+	"block.betternether.anchor_tree_sign": "Табличка из якорного дерева",
+	"block.betternether.anchor_tree_stripped_bark": "Обтёсанная кора якорного дерева",
+	"block.betternether.anchor_tree_stripped_log": "Обтёсанное бревно якорного дерева",
+	"block.betternether.anchor_tree_taburet": "Табурет из якорного дерева",
 	
 	"block.betternether.anchor_tree_vine": "Лозая якорного дерева",
 	"block.betternether.anchor_tree_leaves": "Листва якорного дерева",
