--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -642,15 +642,15 @@
 	"block.betternether.anchor_tree_slab": "锚木台阶",
 	"block.betternether.anchor_tree_stairs": "锚木楼梯",
 	"block.betternether.anchor_tree_trapdoor": "锚木活板门",
-	"block.betternether.barrel_anchor_tree": "锚木桶",
-	"block.betternether.bar_stool_anchor_tree": "锚木高脚凳",
-	"block.betternether.chair_anchor_tree": "锚木椅子",
-	"block.betternether.chest_anchor_tree": "锚木箱子",
-	"block.betternether.crafting_table_anchor_tree": "锚木工作台",
-	"block.betternether.sign_anchor_tree": "锚木告示牌",
-	"block.betternether.striped_bark_anchor_tree": "去皮锚木",
-	"block.betternether.striped_log_anchor_tree": "去皮锚木原木",
-	"block.betternether.taburet_anchor_tree": "锚木凳子",
+	"block.betternether.anchor_tree_barrel": "锚木桶",
+	"block.betternether.anchor_tree_bar_stool": "锚木高脚凳",
+	"block.betternether.anchor_tree_chair": "锚木椅子",
+	"block.betternether.anchor_tree_chest": "锚木箱子",
+	"block.betternether.anchor_tree_crafting_table": "锚木工作台",
+	"block.betternether.anchor_tree_sign": "锚木告示牌",
+	"block.betternether.anchor_tree_stripped_bark": "去皮锚木",
+	"block.betternether.anchor_tree_stripped_log": "去皮锚木原木",
+	"block.betternether.anchor_tree_taburet": "锚木凳子",
 	
 	"block.betternether.anchor_tree_vine": "锚树藤",
 	"block.betternether.anchor_tree_leaves": "锚树叶子",
