Migrated Nether Sakura

--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -672,15 +672,15 @@
   "block.betternether.nether_sakura_slab": "Nether Sakurastufe",
   "block.betternether.nether_sakura_stairs": "Nether Sakuratreppe",
   "block.betternether.nether_sakura_trapdoor": "Nether Sakurafalltür",
-  "block.betternether.barrel_nether_sakura": "Nether Sakurafass",
-  "block.betternether.bar_stool_nether_sakura": "Nether Sakurabarhocker",
-  "block.betternether.chair_nether_sakura": "Nether Sakurastuhl",
-  "block.betternether.chest_nether_sakura": "Nether Sakuratruhe",
-  "block.betternether.crafting_table_nether_sakura": "Nether Sakurawerkbank",
-  "block.betternether.sign_nether_sakura": "Nether Sakuraschild",
-  "block.betternether.striped_bark_nether_sakura": "Entrindetes Nether Sakuraholz",
-  "block.betternether.striped_log_nether_sakura": "Entrindeter Nether Sakurastamm",
-  "block.betternether.taburet_nether_sakura": "Nether Sakurahocker",
+  "block.betternether.nether_sakura_barrel": "Nether Sakurafass",
+  "block.betternether.nether_sakura_bar_stool": "Nether Sakurabarhocker",
+  "block.betternether.nether_sakura_chair": "Nether Sakurastuhl",
+  "block.betternether.nether_sakura_chest": "Nether Sakuratruhe",
+  "block.betternether.nether_sakura_crafting_table": "Nether Sakurawerkbank",
+  "block.betternether.nether_sakura_sign": "Nether Sakuraschild",
+  "block.betternether.nether_sakura_stripped_bark": "Entrindetes Nether Sakuraholz",
+  "block.betternether.nether_sakura_stripped_log": "Entrindeter Nether Sakurastamm",
+  "block.betternether.nether_sakura_taburet": "Nether Sakurahocker",
 
   "block.betternether.nether_sakura_leaves": "Nether Sakurablätter",
   "block.betternether.nether_sakura_sapling": "Nether Sakurasetzling",
