--- a/src/main/resources/assets/betternether/lang/fr_fr.json
+++ b/src/main/resources/assets/betternether/lang/fr_fr.json
@@ -668,15 +668,15 @@
 	"block.betternether.nether_sakura_slab": "Nether Sakura Slab",
 	"block.betternether.nether_sakura_stairs": "Nether Sakura Stairs",
 	"block.betternether.nether_sakura_trapdoor": "Nether Sakura Trapdoor",
-	"block.betternether.barrel_nether_sakura": "Nether Sakura Barrel",
-	"block.betternether.bar_stool_nether_sakura": "Nether Sakura Bar Stool",
-	"block.betternether.chair_nether_sakura": "Nether Sakura Chair",
-	"block.betternether.chest_nether_sakura": "Nether Sakura Chest",
-	"block.betternether.crafting_table_nether_sakura": "Nether Sakura Crafting Table",
-	"block.betternether.sign_nether_sakura": "Nether Sakura Sign",
-	"block.betternether.striped_bark_nether_sakura": "Nether Sakura Striped Bark",
-	"block.betternether.striped_log_nether_sakura": "Nether Sakura Striped Log",
-	"block.betternether.taburet_nether_sakura": "Nether Sakura Taburet",
+	"block.betternether.nether_sakura_barrel": "Nether Sakura Barrel",
+	"block.betternether.nether_sakura_bar_stool": "Nether Sakura Bar Stool",
+	"block.betternether.nether_sakura_chair": "Nether Sakura Chair",
+	"block.betternether.nether_sakura_chest": "Nether Sakura Chest",
+	"block.betternether.nether_sakura_crafting_table": "Nether Sakura Crafting Table",
+	"block.betternether.nether_sakura_sign": "Nether Sakura Sign",
+	"block.betternether.nether_sakura_stripped_bark": "Nether Sakura Striped Bark",
+	"block.betternether.nether_sakura_stripped_log": "Nether Sakura Striped Log",
+	"block.betternether.nether_sakura_taburet": "Nether Sakura Taburet",
 	
 	"block.betternether.nether_sakura_leaves": "Nether Sakura Leaves",
 	"block.betternether.nether_sakura_sapling": "Nether Sakura Sapling",
