--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -672,15 +672,15 @@
 	"block.betternether.nether_sakura_slab": "Laje de sakura do Nether",
 	"block.betternether.nether_sakura_stairs": "Escadas de sakura do Nether",
 	"block.betternether.nether_sakura_trapdoor": "Alçapão de sakura do Nether",
-	"block.betternether.barrel_nether_sakura": "Barril de sakura do Nether",
-	"block.betternether.bar_stool_nether_sakura": "Banqueta de sakura do Nether",
-	"block.betternether.chair_nether_sakura": "Cadeira de sakura do Nether",
-	"block.betternether.chest_nether_sakura": "Baú de sakura do Nether",
-	"block.betternether.crafting_table_nether_sakura": "Bancada de sakura do Nether",
-	"block.betternether.sign_nether_sakura": "Placa de sakura do Nether",
-	"block.betternether.striped_bark_nether_sakura": "Madeira de sakura do Nether descascada",
-	"block.betternether.striped_log_nether_sakura": "Tronco de sakura do Nether descascado",
-	"block.betternether.taburet_nether_sakura": "Banco de sakura do Nether",
+	"block.betternether.nether_sakura_barrel": "Barril de sakura do Nether",
+	"block.betternether.nether_sakura_bar_stool": "Banqueta de sakura do Nether",
+	"block.betternether.nether_sakura_chair": "Cadeira de sakura do Nether",
+	"block.betternether.nether_sakura_chest": "Baú de sakura do Nether",
+	"block.betternether.nether_sakura_crafting_table": "Bancada de sakura do Nether",
+	"block.betternether.nether_sakura_sign": "Placa de sakura do Nether",
+	"block.betternether.nether_sakura_stripped_bark": "Madeira de sakura do Nether descascada",
+	"block.betternether.nether_sakura_stripped_log": "Tronco de sakura do Nether descascado",
+	"block.betternether.nether_sakura_taburet": "Banco de sakura do Nether",
 	
 	"block.betternether.nether_sakura_leaves": "Folhas de sakura do Nether",
 	"block.betternether.nether_sakura_sapling": "Muda de sakura do Nether",
