--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -673,15 +673,15 @@
 	"block.betternether.nether_sakura_slab": "Плита из сакуры",
 	"block.betternether.nether_sakura_stairs": "Ступени из сакуры",
 	"block.betternether.nether_sakura_trapdoor": "Люк из сакуры",
-	"block.betternether.barrel_nether_sakura": "Бочка из сакуры",
-	"block.betternether.bar_stool_nether_sakura": "Барный стул из сакуры",
-	"block.betternether.chair_nether_sakura": "Стул из сакуры",
-	"block.betternether.chest_nether_sakura": "Сундук из сакуры",
-	"block.betternether.crafting_table_nether_sakura": "Верстак из сакуры",
-	"block.betternether.sign_nether_sakura": "Табличка из сакуры",
-	"block.betternether.striped_bark_nether_sakura": "Обтёсанная кора сакуры",
-	"block.betternether.striped_log_nether_sakura": "Обтёсанное бревно сакуры",
-	"block.betternether.taburet_nether_sakura": "Табурет из сакуры",
+	"block.betternether.nether_sakura_barrel": "Бочка из сакуры",
+	"block.betternether.nether_sakura_bar_stool": "Барный стул из сакуры",
+	"block.betternether.nether_sakura_chair": "Стул из сакуры",
+	"block.betternether.nether_sakura_chest": "Сундук из сакуры",
+	"block.betternether.nether_sakura_crafting_table": "Верстак из сакуры",
+	"block.betternether.nether_sakura_sign": "Табличка из сакуры",
+	"block.betternether.nether_sakura_stripped_bark": "Обтёсанная кора сакуры",
+	"block.betternether.nether_sakura_stripped_log": "Обтёсанное бревно сакуры",
+	"block.betternether.nether_sakura_taburet": "Табурет из сакуры",
 	
 	"block.betternether.nether_sakura_leaves": "Листья сакуры нижнего мира",
 	"block.betternether.nether_sakura_sapling": "Саженец сакуры нижнего мира",
