--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -671,15 +671,15 @@
 	"block.betternether.nether_sakura_slab": "下界樱花木台阶",
 	"block.betternether.nether_sakura_stairs": "下界樱花木楼梯",
 	"block.betternether.nether_sakura_trapdoor": "下界樱花木活板门",
-	"block.betternether.barrel_nether_sakura": "下界樱花木桶",
-	"block.betternether.bar_stool_nether_sakura": "下界樱花木高脚凳",
-	"block.betternether.chair_nether_sakura": "下界樱花木椅子",
-	"block.betternether.chest_nether_sakura": "下界樱花木箱子",
-	"block.betternether.crafting_table_nether_sakura": "下界樱花木工作台",
-	"block.betternether.sign_nether_sakura": "下界樱花木告示牌",
-	"block.betternether.striped_bark_nether_sakura": "去皮下界樱花木",
-	"block.betternether.striped_log_nether_sakura": "去皮下界樱花木原木",
-	"block.betternether.taburet_nether_sakura": "下界樱花木凳子",
+	"block.betternether.nether_sakura_barrel": "下界樱花木桶",
+	"block.betternether.nether_sakura_bar_stool": "下界樱花木高脚凳",
+	"block.betternether.nether_sakura_chair": "下界樱花木椅子",
+	"block.betternether.nether_sakura_chest": "下界樱花木箱子",
+	"block.betternether.nether_sakura_crafting_table": "下界樱花木工作台",
+	"block.betternether.nether_sakura_sign": "下界樱花木告示牌",
+	"block.betternether.nether_sakura_stripped_bark": "去皮下界樱花木",
+	"block.betternether.nether_sakura_stripped_log": "去皮下界樱花木原木",
+	"block.betternether.nether_sakura_taburet": "下界樱花木凳子",
 	
 	"block.betternether.nether_sakura_leaves": "下界樱花树叶子",
 	"block.betternether.nether_sakura_sapling": "下界樱花树幼苗",
