--- a/src/main/resources/assets/betternether/lang/en_us.json
+++ b/src/main/resources/assets/betternether/lang/en_us.json
@@ -698,5 +698,6 @@
 	
     "block.betternether.nether_redstone_ore": "Nether Redstone Ore",
 	"block.betternether.blue_crying_obsidian": "Blue Crying Obsidian",
-	"block.betternether.blue_weeping_obsidian": "Blue Weeping Obsidian"
+	"block.betternether.blue_weeping_obsidian": "Blue Weeping Obsidian",
+	"block.betternether.weeping_obsidian": " Weeping Obsidian"
 }
